--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,28 +8,38 @@
 </head>
 <body>
     <nav>
-        <div class = "site-title">
-        <a href = "/"> <h1>Daily Blog</h1> </a>
-        <p>A simple minimal blogsite</p>
-
-    <ul>
-        <li><a href ="/"> Blogs </a></li>
-        <li><a href ="/about"> About </a></li>
-        <li><a href ="/blogs/create"> New Blog </a></li>
-    </ul>    
+        <div class="site-title">
+            <a href="/"><h1>Daily Blog</h1></a>
+            <p>A simple minimal blogsite</p>
+        </div>
+        <ul>
+            <li><a href="/">Blogs</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/blogs/create">New Blog</a></li>
+        </ul>
     </nav>
-    
-    <% if (blogs.length > 0) { %>
-        <% blogs.forEach(blog => { %>
-            <h3 class = "title"><%= blog.title %></h3>
-            <p class = "snippet"><%= blog.snippet %></p>
-        <% }) %>
-    <% } else { %>
-        <p> There are no blogs to display..... </p>
-    <% } %>
-    
-    <footer>
-        Copyright © Some Dude in the Internet
-    </footer>
+
+    <div class="blogs content">
+        <% if (blogs.length > 0) { %>
+            <% blogs.forEach(blog => { %>
+                <div class="blog-preview">
+                    <h3 class="title"><%= blog.title %></h3>
+                    <p class="snippet"><%= blog.snippet %></p>
+                    <div class="blog-actions">
+                        <a href="/blogs/<%= blog._id %>" class="view">Read More</a>
+                        <a href="/blogs/edit/<%= blog._id %>" class="edit">Edit</a>
+                        <button class="delete" data-doc="<%= blog._id %>">Delete</button>
+                    </div>
+                </div>
+            <% }) %>
+        <% } else { %>
+            <p>There are no blogs to display...</p>
+        <% } %>
+    </div>
+
+    <script type="module">
+        import { handleMultipleDeletes } from './controllers/controller.js';
+        handleMultipleDeletes();
+    </script>
 </body>
 </html>
