--- a/views/create.ejs
+++ b/views/create.ejs
@@ -30,6 +30,9 @@
         <button>Submit</button>
       </form>
     </div>
-
+    <script type="module">
+      import { handleCreate } from './controllers/controller.js';
+      handleCreate();
+    </script>
 </body>
 </html>
