--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,8 +38,8 @@
     </div>
 
     <script type="module">
-        import { handleMultipleDeletes } from './controllers/controller.js';
-        handleMultipleDeletes();
+        import { handleDelete } from './controllers/controller.js';
+        handleDelete();
     </script>
 </body>
 </html>
