--- a/views/details.ejs
+++ b/views/details.ejs
@@ -31,8 +31,8 @@
     </div>
 
     <script type="module">
-        import { handleSingleDelete } from './controllers/controller.js';
-        handleSingleDelete();
+        import { handleDelete } from '/controllers/controller.js';
+        handleDelete();
     </script>
 </body>
 </html>
